--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">PermissionSummary</string>
+    <string name="app_name">Permission Summary</string>
+    <string name="app_loading">Loading…</string>
+
+    <string name="app_back_press">Press back again to exit app</string>
 </resources>
